--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=FootAPI
 spring.datasource.url=jdbc:mysql://localhost:3306/footballdb
+spring.datasource.username=root
+spring.datasource.password=root9090
 spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.data.jdbc.repositories.enabled=true
