--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.data.jdbc.repositories.enabled=true
 spring.data.jdbc.dialect=mysql
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.tomcat.access-to-underlying-connection-allowed=true
+spring.jpa.hibernate.naming.implicit-strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
 spring.jpa.show-sql=true
