--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
+        <dependency> 
+            <groupId>org.mockito</groupId> 
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope> 
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jdbc</artifactId>
